--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </header>
     </div>
     <div class="allBox">
-        <div class="add" id="index_0">
+        <div class="add">
             <input type="text" class="newLi">
             <button type="button" class="addButton">add</button>
             <ul class="listStylereset box toDo"></ul>
