--- a/src/index.html
+++ b/src/index.html
@@ -23,9 +23,13 @@
     </div>
     <script type="text/template" id="taskItemTemplate">
         <li>
-        <input id="{{itemid}}"type="checkbox" class="check" {{}}>
-        <label for="{{itemid}}">{{title}}</label>
-           <button id="{{valid}}" class='delButton'>X</button>
+        <div class="taskEdit">
+           <label for="{{itemid}}">{{title}}</label>
+           <div class="edit">
+              <input id="{{itemid}}"type="checkbox" class="check" {{}}>
+              <button id="{{valid}}" class='delButton'>X</button>
+           </div>
+        </div>
         </li>
     </script>
 </body>
